--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-    background: #c7d0f0;
+    background: #13191a;
     font-family: 'Inter';
     font-weight: 400;
     font-size: 32px;
@@ -12,6 +12,15 @@
     width: 10%;
 }
 
+/*
+.logo2{
+   
+   padding-top: 10px;
+   margin-left: 1120px;
+   width: 8%;
+}
+*/
+
 main{
     display:flex;  /*Separa los dos box al costado*/
     margin-bottom: 10px;
@@ -20,10 +29,10 @@ main{
 
 /*Color al texto y el foco del cuadro*/
 .text-area{
-    height: 400px;
+    height: 300px;
     border: none;
-    color: #0A3871;
-    margin-top: 90px;
+    color: #40c9c3;
+    margin-top: 9px;
     text-transform: lowercase;
 }
 
@@ -33,28 +42,29 @@ main{
     outline: none;
  }
 
+ /*"Ningun mensaje fue encontrado" y "Ingresa el texto que desees encriptar o desencriptar"*/
  .mensaje{
     position: fixed;
-    width: 400px;
+    width: 390px;
     height: 570px; /*670px*/
     text-align: center;
     border-radius: 32px;
     padding-left: 20px;
     box-sizing: content-box;
-    background: rgb(230, 246, 245);
+    background: rgb(9 26 25);
     background-image: url("../img/Muñeco.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 75%;
+    background-size: 65%;
     background-position-y: 5%;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border: none;
     border-radius: 32px;
-    color: #0A3871;
+    color: #2796b9;
     font-family: 'Inter';
     font-style: normal;
     margin-left: 98px;
-    margin-top: 50px;
+    margin-top: 5px;
     padding-left: 20px;
  }
 
@@ -97,19 +107,20 @@ main{
 
 
  .btn-copiar{
-    border: 1px solid #0A3871;
+    border: 1px solid #2796b9;
     border-radius: 24px;
-    color: #0A3871;
-    cursor: pointer;
+    color: #42c8d3;
+    cursor:pointer;
     position: fixed;
     width: 336px;
     height: 67px;
     margin-left: 140px;
-    margin-top: 530px;
+    margin-top: 440px;
+    
  }
 
 .informacion{
-    color: #495057;
+    color: #46ded6;
     font-size: 18px;
 } 
 
@@ -118,7 +129,7 @@ main{
    display: flex;
    justify-content: center;
    align-items: center;
-   background:cadetblue;
+   background:#1f2e30;
    margin-left:-100px;
    margin-right: -8px;
    padding: 40px;
@@ -147,22 +158,41 @@ footer {
 
 .texto1 {
    font-size: 24px;
-   color: #343A40;
-   position: fixed;
-   margin-top: 400px;
-   margin-left: 110px;
+   color: #237e77;
+   position:fixed;
+   margin-top: 340px;
+   margin-left: 100px;
    padding-left: 55px;
    justify-content: center;
-   background: rgb(230, 246, 245);
+   /*background: rgb(230, 246, 245);
+   top: 20px; 
+   right: 110px; 
+   */
+   background: none;
+   
+   
+   
 }
 
 .texto2 {
    font-size: 16px;
-   color: #495057;
+   color: #1e6a64;
    position: fixed;
-   margin-top: 450px;
-   margin-left: 135px;
+   margin-top: 380px;
+   margin-left: 125px;
    padding-left: 20px; /*20px*/
    justify-content: center;
-   background: rgb(230, 246, 245);
+   /*background: rgb(230, 246, 245);
+   top: 30px;
+   right: 110px;
+   */
+   background: none;
+   
 }
+
+/*section textarea div {
+   position: absolute;
+   padding-top: 10px;
+   margin-left: 10px;
+   width: 10%;
+}*/
